--- a/rollup/main/default/lwc/jsconfig.json
+++ b/rollup/main/default/lwc/jsconfig.json
@@ -3,11 +3,24 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/rollupForceRecalculation": ["rollupForceRecalculation/rollupForceRecalculation.js"]
+            "c/rollupForceRecalculation": [
+                "rollupForceRecalculation/rollupForceRecalculation.js"
+            ]
         }
     },
-    "include": ["**/*", "../../.sfdx/typings/lwc/**/*.d.ts", "../../../../.sfdx/typings/lwc/**/*.d.ts"],
+    "include": [
+        "**/*",
+        "../../.sfdx/typings/lwc/**/*.d.ts",
+        "../../../../.sfdx/typings/lwc/**/*.d.ts"
+    ],
     "typeAcquisition": {
-        "include": ["jest"]
+        "include": [
+            "jest"
+        ]
+    },
+    "paths": {
+        "c/*": [
+            "*"
+        ]
     }
 }
