--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,29 @@ on:
     branches:
       - master
     paths-ignore:
-      - "sfdx-project.json"
-      - "README.md"
-      - "Contributing.md"
-      - "CODE_OF_CONDUCT.md"
-      - "package.json"
-      - "LICENSE"
-      - "media/**"
-      - ".gitignore"
-      - ".prettierignore"
-      - ".prettierrc"
+      - 'sfdx-project.json'
+      - 'README.md'
+      - 'Contributing.md'
+      - 'CODE_OF_CONDUCT.md'
+      - 'package.json'
+      - 'LICENSE'
+      - 'media/**'
+      - '.gitignore'
+      - '.prettierignore'
+      - '.prettierrc'
   pull_request:
     types: [opened, edited, synchronize, reopened]
     paths-ignore:
-      - "sfdx-project.json"
-      - "README.md"
-      - "Contributing.md"
-      - "CODE_OF_CONDUCT.md"
-      - "package.json"
-      - "LICENSE"
-      - "media/**"
-      - ".gitignore"
-      - ".prettierignore"
-      - ".prettierrc"
+      - 'sfdx-project.json'
+      - 'README.md'
+      - 'Contributing.md'
+      - 'CODE_OF_CONDUCT.md'
+      - 'package.json'
+      - 'LICENSE'
+      - 'media/**'
+      - '.gitignore'
+      - '.prettierignore'
+      - '.prettierrc'
 
 jobs:
   scratch-org-test:
@@ -44,16 +44,16 @@ jobs:
           ./sfdx-cli/install
 
       # Checkout the code
-      - name: "Checkout source code"
+      - name: 'Checkout source code'
         uses: actions/checkout@v2
 
       # Store secret for dev hub
-      - name: "Populate auth file with DEVHUB_SFDX_URL secret"
+      - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
         shell: bash
-        run: "echo ${{ env.DEVHUB_SFDX_URL }} > ./DEVHUB_SFDX_URL.txt"
+        run: 'echo ${{ env.DEVHUB_SFDX_URL }} > ./DEVHUB_SFDX_URL.txt'
         env:
           DEVHUB_SFDX_URL: ${{ secrets.DEVHUB_SFDX_URL }}
 
-      - name: "Run build script, test, and exit"
-        shell: bash
-        run: "sh ./test.sh"
+      - name: 'Run build script, test, and exit'
+        shell: pwsh
+        run: '. ./scripts/test.ps1'
