Explicitly adding API version, it seems SFDX defaults to version 48 otherwise at this point

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,5 +6,6 @@
     }
   ],
   "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com"
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "50.0"
 }
