Enabled sample data for scratch orgs

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,5 +3,6 @@
   "edition": "Developer",
   "country": "US",
   "language": "en_US",
-  "features": []
+  "features": [],
+  "hasSampleData": true
 }
