--- a/codecov.yml
+++ b/codecov.yml
@@ -2,13 +2,8 @@ coverage:
     status:
         project:
             default:
-                flags:
-                    - LWC
-                    - Apex
-            LWC:
-                flags:
-                    - LWC
-            Apex:
-                flags:
-                    - Apex
+                range: 75...100
+                round: down
+                precision: 2
+                if_ci_failed: success
         patch: off
