@jongpie feedback (w h i t e s p a c e on the 'Id' field), added note in Readme about screen locking for full recalculation, added first jest unit test for rollupForceRecalculation LWC

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,14 @@ jobs:
       - name: 'Checkout source code'
         uses: actions/checkout@v2
 
+      # Install NPM & Run LWC tests
+      - name: 'Install node & run LWC tests'
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+        run: npm install
+        run: npm test
+
       # Install Salesforce CLI
       - name: Install Salesforce CLI
         run: |
