--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "prettier-plugin-apex": "latest",
-    "prettier": "latest"
+    "prettier": "latest",
+    "@salesforce/sfdx-lwc-jest": "latest"
+  },
+  "scripts": {
+    "test": "sfdx-lwc-jest"
   }
 }
