--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex-rollup",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
   "repository": {
     "type": "git",
@@ -10,6 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "prettier-plugin-apex": "latest",
-    "prettier": "latest"
+    "prettier": "latest",
+    "@salesforce/sfdx-lwc-jest": "latest"
+  },
+  "scripts": {
+    "test": "sfdx-lwc-jest"
   }
 }
