Added main to Github Action, added codecov coverage badge to README

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Rollup Release Status
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - 'sfdx-project.json'
       - 'README.md'
