All tests passing, still TODO: actually supporting re-querying when polymorphic lookup fields are part of calc item where clause

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,7 +3,8 @@
     {
       "path": "rollup",
       "default": true
-    }
+    },
+    {"path": "extra-tests"}
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
