--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,17 @@
 {
-  "packageDirectories": [
-    {
-      "path": "rollup",
-      "default": true
+    "packageDirectories": [
+        {
+            "default": true,
+            "package": "apex-rollup",
+            "path": "rollup",
+            "versionNumber": "1.2.6.0"
+        }
+    ],
+    "namespace": "",
+    "sfdcLoginUrl": "https://login.salesforce.com",
+    "sourceApiVersion": "51.0",
+    "packageAliases": {
+        "apex-rollup": "0Ho6g000000TNcOCAW",
+        "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO"
     }
-  ],
-  "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "51.0"
 }
