--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.7.0"
+            "versionNumber": "1.2.8.0"
         }
     ],
     "namespace": "",
@@ -13,6 +13,7 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO",
-        "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO"
+        "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
+        "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO"
     }
 }
