--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -14,6 +14,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO",
         "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
-        "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO"
+        "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
+        "apex-rollup@1.2.9-0": "04t6g000008GJQGAA4"
     }
 }
