--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,9 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.9.0"
+            "versionNumber": "1.2.9.0",
+            "versionDescription": "Removed Opportunity usage from integration tests, fixed bug with Recalculate Rollup App, introduced datatable within app so admins can visualize the rollups that will run per object when using CMDT",
+            "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases"
         }
     ],
     "namespace": "",
