--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,6 @@
         "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO",
         "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
         "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
-        "apex-rollup@1.2.9-0": "04t6g000008GJQQAA4"
+        "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4"
     }
 }
