--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.9.0",
-            "versionDescription": "Removed Opportunity usage from integration tests, fixed bug with Recalculate Rollup App, introduced datatable within app so admins can visualize the rollups that will run per object when using CMDT",
+            "versionNumber": "1.2.10.0",
+            "versionDescription": "Bugfixes for FIRST/LAST, validation rules enforced for Invocables, added hierarchical rollup support (either in conjunction with grandparent rollups, or separately)",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases"
         }
     ],
@@ -17,6 +17,7 @@
         "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO",
         "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
         "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
-        "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4"
+        "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
+        "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO"
     }
 }
