Fixes #82 - with caveats about the need to extend the LWC to support all of the fields necessary - by enforcing validation rules for performFullRecalculation method in Rollup

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -18,6 +18,7 @@
         "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
         "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
         "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
-        "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO"
+        "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
+        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO"
     }
 }
