--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.11.0",
-            "versionDescription": "Fixed an issue with updates and calc item where clauses - a calc item should still qualify for rolling up if the prior value on an update qualifies and the current value is disqualified based on the where clause",
+            "versionNumber": "1.2.12.0",
+            "versionDescription": "",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases"
         }
     ],
