--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.12.0",
-            "versionDescription": "CONCAT_DISTINCT bugfix for deletions, Full Recalc application updates",
+            "versionDescription": "CONCAT_DISTINCT bugfix for deletions, Full Recalc application updates, better validation for flows/full recalcs",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -19,6 +19,7 @@
         "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
         "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
         "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
-        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO"
+        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
+        "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4"
     }
 }
