--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,9 +4,9 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.11.0",
-            "versionDescription": "Fixed an issue with updates and calc item where clauses - a calc item should still qualify for rolling up if the prior value on an update qualifies and the current value is disqualified based on the where clause",
-            "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases"
+            "versionNumber": "1.2.12.0",
+            "versionDescription": "CONCAT_DISTINCT bugfix for deletions, Full Recalc application updates, better validation for flows/full recalcs",
+            "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
     "namespace": "",
@@ -19,6 +19,7 @@
         "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
         "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
         "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
-        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO"
+        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
+        "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4"
     }
 }
