--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.12.0",
-            "versionDescription": "CONCAT_DISTINCT bugfix for deletions, Full Recalc application updates, better validation for flows/full recalcs",
+            "versionNumber": "1.2.13.0",
+            "versionDescription": "Fixed issue with read-only trigger collections",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -20,6 +20,7 @@
         "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
         "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
         "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
-        "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4"
+        "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4",
+        "apex-rollup@1.2.13-0": "04t6g000008GJeUAAW"
     }
 }
