--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.13.0",
-            "versionDescription": "Fixed issue with read-only trigger collections",
+            "versionNumber": "1.2.14.0",
+            "versionDescription": "DLRS rule conversion script added thanks to Jonathan Gillespie, recursion detection implemented, added README documentation for Concat Delimiter, added integration test coverage for trigger-based Rollups",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -21,6 +21,7 @@
         "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
         "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
         "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4",
-        "apex-rollup@1.2.13-0": "04t6g000008GJeUAAW"
+        "apex-rollup@1.2.13-0": "04t6g000008GJeUAAW",
+        "apex-rollup@1.2.14-0": "04t6g000008GJjQAAW"
     }
 }
