--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.15.0",
-            "versionDescription": "DLRS rule conversion script added thanks to Jonathan Gillespie, recursion detection implemented, added README documentation for Concat Delimiter, added integration test coverage for trigger-based Rollups",
+            "versionDescription": "Automated build pipeline",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
