--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -22,6 +22,7 @@
         "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
         "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4",
         "apex-rollup@1.2.13-0": "04t6g000008GJeUAAW",
-        "apex-rollup@1.2.14-0": "04t6g000008GJjQAAW"
+        "apex-rollup@1.2.14-0": "04t6g000008GJjQAAW",
+        "apex-rollup@1.2.15-0": "04t6g000008GJlWAAW"
     }
 }
