--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.16.0",
-            "versionDescription": "Slight performance improvements",
+            "versionNumber": "1.2.17.0",
+            "versionDescription": "Fix too-permissiveness for some update operations in RollupEvaluator",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
