--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,19 +82,16 @@ jobs:
 
       - name: 'Package & Promote'
         shell: pwsh
-        if: ${{ env.SHOULD_CREATE_AND_PROMOTE == '1' }}
+        if: ${{ env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login }}
         run: '. ./scripts/build-and-promote-package.ps1'
         env:
           SHOULD_CREATE_AND_PROMOTE: ${{ secrets.SHOULD_CREATE_AND_PROMOTE }}
 
       - name: 'Re-commit updated package version (if necessary)'
-        if: ${{ github.ref != 'refs/heads/main' && env.SHOULD_CREATE_AND_PROMOTE == '1' }}
+        if: ${{ github.ref != 'refs/heads/main' && env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SHOULD_CREATE_AND_PROMOTE: ${{ secrets.SHOULD_CREATE_AND_PROMOTE }}
-        run: |
-          git config --global user.name "James Simone"
-          git config --global user.email "16430727+jamessimone@users.noreply.github.com"
-          git commit -m "Bumping package version from Github Action"
-          git push
+        run: 'sh ./scripts/updateGithubCommitStatus.sh'
+
 
