--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -25,6 +25,7 @@
         "apex-rollup@1.2.14-0": "04t6g000008GJjQAAW",
         "apex-rollup@1.2.15-0": "04t6g000008GJlbAAG",
         "apex-rollup@1.2.16-0": "04t6g000008GJm0AAG",
-        "apex-rollup@1.2.17-0": "04t6g000008nt24AAA"
+        "apex-rollup@1.2.17-0": "04t6g000008nt24AAA",
+        "apex-rollup@1.2.17-0-v1.2.17": "04t6g000008nt2nAAA"
     }
 }
