--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,7 +83,7 @@ jobs:
       #  Only create new package versions if a PR is pointed to main or we are merging to main
       - name: 'Package & Promote'
         shell: pwsh
-        if: ${{ env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login && (github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main' || github.ref == 'refs/heads/main') }}
+        if: ${{ env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login && (github.base_ref == 'refs/heads/main' || github.ref == 'refs/heads/main') }}
         run: '. ./scripts/build-and-promote-package.ps1'
         env:
           SHOULD_CREATE_AND_PROMOTE: ${{ secrets.SHOULD_CREATE_AND_PROMOTE }}
@@ -91,7 +91,7 @@ jobs:
       # Package versions are only created automatically within PRs that are pointed to main
       # so those are the only times we need to update the README /sfdx-project.json and package.json
       - name: 'Re-commit updated package version (if necessary)'
-        if: ${{ github.ref != 'refs/heads/main' && env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login && github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main' }}
+        if: ${{ github.ref != 'refs/heads/main' && env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login && github.base_ref == 'refs/heads/main' }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SHOULD_CREATE_AND_PROMOTE: ${{ secrets.SHOULD_CREATE_AND_PROMOTE }}
