--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@salesforce/sfdx-lwc-jest": "latest"
   },
   "scripts": {
-    "test": "sfdx-lwc-jest"
+    "test": "npm run testApex && npm run testLWC",
+    "testApex": "sh ./scripts/runLocalTests.sh",
+    "testLWC": "sfdx-lwc-jest"
   }
 }
