--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.18.0",
-            "versionDescription": "Fix hashCode implementation for recursive checks. Removed some duplicate methods from Rollup.",
+            "versionNumber": "1.2.19.0",
+            "versionDescription": "Make deferred rollup operations even safer by consolidating logic for when a Rollup is queued, batched, or run synchronously.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -26,6 +26,7 @@
         "apex-rollup@1.2.15-0": "04t6g000008GJlbAAG",
         "apex-rollup@1.2.16-0": "04t6g000008GJm0AAG",
         "apex-rollup@1.2.17-0": "04t6g000008nt3WAAQ",
-        "apex-rollup@1.2.18-0": "04t6g000008nt4PAAQ"
+        "apex-rollup@1.2.18-0": "04t6g000008nt4PAAQ",
+        "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ"
     }
 }
