--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -27,6 +27,7 @@
         "apex-rollup@1.2.16-0": "04t6g000008GJm0AAG",
         "apex-rollup@1.2.17-0": "04t6g000008nt3WAAQ",
         "apex-rollup@1.2.18-0": "04t6g000008nt4PAAQ",
-        "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ"
+        "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ",
+        "apex-rollup@1.2.20-0": "04t6g000008nt5NAAQ"
     }
 }
