--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex-rollup",
-  "version": "1.2.20.0",
+  "version": "1.2.21.0",
   "description": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "npm run testApex && npm run testLWC",
     "testApex": "sh ./scripts/runLocalTests.sh",
-    "testLWC": "sfdx-lwc-jest"
+    "testLWC": "sfdx-lwc-jest",
+    "prettier": "prettier"
   }
 }
