--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -29,6 +29,7 @@
         "apex-rollup@1.2.18-0": "04t6g000008nt4PAAQ",
         "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ",
         "apex-rollup@1.2.20-0": "04t6g000008nt5NAAQ",
-        "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA"
+        "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA",
+        "apex-rollup@1.2.22-0": "04t6g000008SgCPAA0"
     }
 }
