--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -30,6 +30,6 @@
         "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ",
         "apex-rollup@1.2.20-0": "04t6g000008nt5NAAQ",
         "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA",
-        "apex-rollup@1.2.22-0": "04t6g000008SgCPAA0"
+        "apex-rollup@1.2.22-0": "04t6g000008SgCUAA0"
     }
 }
