--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@salesforce/sfdx-lwc-jest": "latest"
   },
   "scripts": {
-    "test": "npm run testApex && npm run testLWC",
-    "testApex": "sh ./scripts/runLocalTests.sh",
-    "testLWC": "sfdx-lwc-jest",
+    "test": "npm run test:apex && npm run test:lwc",
+    "test:apex": "sh ./scripts/runLocalTests.sh",
+    "test:lwc": "sfdx-lwc-jest",
     "prettier": "prettier"
   }
 }
