--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         run: npm install
 
       - name: 'Run LWC Unit Tests'
-        run: npm run testLWC
+        run: npm run test:lwc
 
       # Install Salesforce CLI
       - name: Install Salesforce CLI
