--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -34,6 +34,6 @@
         "apex-rollup@1.2.23-0": "04t6g000008SgDcAAK",
         "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0",
         "apex-rollup@1.2.25-0": "04t6g000008SgGCAA0",
-        "apex-rollup@1.2.26-0": "04t6g000008SgGRAA0"
+        "apex-rollup@1.2.26-0": "04t6g000008SgGvAAK"
     }
 }
