--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex-rollup",
-  "version": "1.2.30.0",
+  "version": "1.2.31.0",
   "description": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
   "repository": {
     "type": "git",
@@ -11,12 +11,12 @@
   "devDependencies": {
     "prettier-plugin-apex": "latest",
     "prettier": "latest",
-    "@salesforce/sfdx-lwc-jest": "latest"
+    "@salesforce/sfdx-lwc-jest": "0.12.5"
   },
   "scripts": {
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
-    "test:lwc": "sfdx-lwc-jest",
+    "test:lwc": "sfdx-lwc-jest --coverage --skipApiVersionCheck",
     "prettier": "prettier"
   }
 }
