--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -40,6 +40,6 @@
         "apex-rollup@1.2.29-0": "04t6g000008SgLWAA0",
         "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK",
         "apex-rollup@1.2.31-0": "04t6g000008SgaiAAC",
-        "apex-rollup@1.2.32-0": "04t6g000008SgbbAAC"
+        "apex-rollup@1.2.32-0": "04t6g000008SgbgAAC"
     }
 }
