--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -41,6 +41,7 @@
         "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK",
         "apex-rollup@1.2.31-0": "04t6g000008SgaiAAC",
         "apex-rollup@1.2.32-0": "04t6g000008SgbqAAC",
-        "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC"
+        "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
+        "apex-rollup@1.2.34-0": "04t6g000008SglrAAC"
     }
 }
